<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="18dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icprotection" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/selectedTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_group_add_black_24dp"
                android:drawableRight="@drawable/ic_add_circle_outline_black_24dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/mm"
                android:hint="@string/yourTeam"
                android:padding="8dp"
                android:textColor="#212427"
                android:textColorHint="#7C7F81"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/signupTeamPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/teampin"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#7C7F81"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/color_cursor" />

            <EditText
                android:id="@+id/userFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_person_add_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#7C7F81"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/color_cursor" />

            <EditText
                android:id="@+id/userNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/nickname"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />

            <EditText
                android:id="@+id/userPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/creatPass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />


            <EditText
                android:id="@+id/userCnfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/mm"
                android:gravity="left"
                android:hint="@string/cnfPass"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />

            <Button
                android:id="@+id/button_signup"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bgbtnguide_1"
                android:clickable="true"
                android:fontFamily="@font/mr"
                android:padding="8dp"
                android:text="@string/signup"
                android:onClick="signUpUser"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvlogin"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:fontFamily="@font/mm"
                    android:gravity="center"
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:text="@string/login_text"
                    android:textColor="#7C7F81" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>