<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/icprotection"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:textSize="14sp"
                android:maxLength="40"
                android:fontFamily="@font/mm"
                android:id="@+id/edit_test_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/background_email_box"
                android:drawableLeft="@drawable/ic_user_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/text_Color"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null"/>

            <EditText
                android:maxLength="30"
                android:id="@+id/edit_test_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_email_box"
                android:drawableStart="@drawable/ic_locked_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null"/>

            <CheckBox
                android:theme="@style/WhiteCheck"
                android:id="@+id/rem_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/remember"
                android:textColor="@color/text_Color"/>

            <Button
                android:fontFamily="@font/mr"
                android:id="@+id/button_login"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bgbtnguide_1"
                android:clickable="true"
                android:padding="8dp"
                android:onClick="login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="6dp">
                <TextView
                    android:fontFamily="@font/mm"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:padding="14dp"
                    android:text="@string/forget"
                    android:textSize="14sp"
                    android:textColor="@color/text_Color"/>
                <TextView
                    android:fontFamily="@font/mm"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:padding="14dp"
                    android:textSize="14sp"
                    android:text="@string/signup_text"
                    android:textColor="@color/text_Color"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>