<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context=".RegisterTeam">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:id="@+id/userlogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/icprotection"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="40dp"
                />

            <EditText
                android:maxLength="10"
                android:drawableLeft="@drawable/ic_group_add_black_24dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/mm"
                android:id="@+id/registerTeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_email_box"
                android:ems="10"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="@string/Teamname"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#7C7F81"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/color_cursor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null"/>

            <EditText
                android:maxLength="35"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/mm"
                android:id="@+id/registerTeamEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_email_box"
                android:ems="10"
                android:gravity="left"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null"/>

            <EditText
                android:maxLength="8"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/mm"
                android:id="@+id/registerTeamPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_email_box"
                android:ems="10"
                android:gravity="left"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:hint="@string/teamPin"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColorHint="#7C7F81"
                android:textCursorDrawable="@drawable/color_cursor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null"/>

            <Button
                android:fontFamily="@font/mr"
                android:id="@+id/button_register"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bgbtnguide_1"
                android:clickable="true"
                android:padding="8dp"
                android:onClick="registerTeam"
                android:text="@string/registerYourTeam"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>